--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,8 +62,9 @@ stages:
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
             # az login --service-principal -u $(AZURE_CLIENT_ID) -p $(AZURE_CLIENT_SECRET) --tenant $(AZURE_TENANT_ID)
             # az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-            #   export new_test=$(test)
-            #   envsubst '${new_test}'< secretsproviderclass.yaml > secretsproviderclass-new.yaml
+              export new_test=$(AZURE_CLIENT_SECRET)
+              envsubst '${new_test}'< secretsproviderclass.yaml > secretsproviderclass-new.yaml
+              cat secretsproviderclass-new.yaml
             #   kubectl apply -f secretsproviderclass-new.yaml
 
               export new_id=$(AZURE_CLIENT_ID)
