--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,14 +33,14 @@ stages:
 
    
 
-    # - task: AzureCLI@2
-    #   name: terraformApply
-    #   inputs:
-    #     azureSubscription: 'azure'
-    #     scriptType: 'bash'
-    #     scriptLocation: 'inlineScript'
-    #     inlineScript: |
-    #       cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
+    - task: AzureCLI@2
+      name: terraformApply
+      inputs:
+        azureSubscription: 'azure'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
     #         export TF_VAR_user_name="$(USER_NAME)"
     #         export TF_VAR_user_password="$(USER_PASSWORD)"
     #         export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
@@ -51,9 +51,10 @@ stages:
     #         terraform apply --auto-approve
             
     #        client_id=$(terraform output kubelet_identity_client_id)
-    #        echo $client_id
-    #        echo "##vso[task.setvariable variable=test]$client_id"
-    #        echo $(test)
+           client_id='1234567890'
+           echo $client_id
+           echo "##vso[task.setvariable variable=test]$client_id"
+           echo $(test)
 
     - task: Bash@3
       inputs:
@@ -62,7 +63,7 @@ stages:
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
             # az login --service-principal -u $(AZURE_CLIENT_ID) -p $(AZURE_CLIENT_SECRET) --tenant $(AZURE_TENANT_ID)
             # az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-              export new_test='23456789'
+              export new_test=$(test)
               envsubst '${new_test}'< secretsproviderclass.yaml > secretsproviderclass-new.yaml
               cat secretsproviderclass-new.yaml
             #   kubectl apply -f secretsproviderclass-new.yaml
