--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,11 @@ stages:
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
+          lient_id=$(AZURE_CLIENT_ID)
+          echo $lient_id
+          echo "##vso[task.setvariable variable=rest]$lient_id"
+          echo $(rest)
+
     #         export TF_VAR_user_name="$(USER_NAME)"
     #         export TF_VAR_user_password="$(USER_PASSWORD)"
     #         export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
@@ -64,7 +69,7 @@ stages:
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
             # az login --service-principal -u $(AZURE_CLIENT_ID) -p $(AZURE_CLIENT_SECRET) --tenant $(AZURE_TENANT_ID)
             # az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-              export new_id= $(AZURE_CLIENT_ID)
+              export new_id= $(rest)
               echo $new_id
               envsubst '$new_id'< webapp-deployment.yaml > webapp-deployment-new.yaml
               kubectl apply -f webapp-deployment-new.yaml
