--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,7 @@ stages:
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
+          echo $(AZURE_CLIENT_ID)
           lient_id=$(AZURE_CLIENT_ID)
           echo $lient_id
           echo "##vso[task.setvariable variable=rest]$lient_id"
