--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,10 +46,10 @@ stages:
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
          
-          # lient_id=$(AZURE_CLIENT_ID)
-          # echo $lient_id
-          # echo "##vso[task.setvariable variable=rest]$lient_id"
-          # echo $(rest)
+          lient_id="$(AZURE_CLIENT_ID)"
+          echo $lient_id
+          echo "##vso[task.setvariable variable=rest]$lient_id"
+          echo $(rest)
 
     #         export TF_VAR_user_name="$(USER_NAME)"
     #         export TF_VAR_user_password="$(USER_PASSWORD)"
