--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
             # az login --service-principal -u $(AZURE_CLIENT_ID) -p $(AZURE_CLIENT_SECRET) --tenant $(AZURE_TENANT_ID)
             # az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-              export new_id="$(rest)"
+              export new_id=$AZURE_CLIENT_ID
               echo $new_id
               envsubst '$new_id'< webapp-deployment.yaml > webapp-deployment-new.yaml
               kubectl apply -f webapp-deployment-new.yaml
