--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,11 @@ stages:
           echo "##vso[task.setvariable variable=rest]$lient_id"
           echo $(rest)
 
+          client_Pwd='GSV'
+          echo $client_pwd
+          echo "##vso[task.setvariable variable=best]$client_pwd"
+          echo $(best)
+
     #         export TF_VAR_user_name="$(USER_NAME)"
     #         export TF_VAR_user_password="$(USER_PASSWORD)"
     #         export TF_VAR_user_rootpassword="$(USER_ROOTPASSWORD)"
@@ -80,6 +85,12 @@ stages:
               echo $test
               envsubst '${new_test}' < secretsproviderclass.yaml > secretsproviderclass-new.yaml
               cat secretsproviderclass-new.yaml
+
+              export new_pwd=$(best)
+              echo $new_pwd
+              envsubst '${new_pwd}' < webapp-deployment-new.yaml > webapp-deployment-nnew.yaml
+              kubectl apply -f webapp-deployment-new.yaml
+              cat webapp-deployment-nnew.yaml
             #   kubectl apply -f secretsproviderclass-new.yaml
 
              
