--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,10 +45,12 @@ stages:
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
-          client_Pwd='GSV'
+
+          client_Pwd='12378890'
           echo $client_pwd
           echo "##vso[task.setvariable variable=best]$client_pwd"
           echo $(best)
+          
           lient_id='098765443321'
           echo $lient_id
           echo "##vso[task.setvariable variable=rest]$lient_id"
