--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,15 +46,15 @@ stages:
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
 
-          client_Pwd='12378890'
-          echo $client_pwd
-          echo "##vso[task.setvariable variable=best]$client_pwd"
-          echo $(best)
-          
-          lient_id='098765443321'
-          echo $lient_id
-          echo "##vso[task.setvariable variable=rest]$lient_id"
-          echo $(rest)
+          # client_Pwd='12378890'
+          # echo $client_pwd
+          # echo "##vso[task.setvariable variable=best]$client_pwd"
+          # echo $(best)
+
+          # lient_id='098765443321'
+          # echo $lient_id
+          # echo "##vso[task.setvariable variable=rest]$lient_id"
+          # echo $(rest)
 
          
 
