--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,10 +51,10 @@ stages:
           # echo "##vso[task.setvariable variable=best]$client_pwd"
           # echo $(best)
 
-          # lient_id='098765443321'
-          # echo $lient_id
-          # echo "##vso[task.setvariable variable=rest]$lient_id"
-          # echo $(rest)
+          lient_id='098765443321'
+          echo $lient_id
+          echo "##vso[task.setvariable variable=rest]$lient_id"
+          echo $(rest)
 
          
 
